# Projeto1-Perspectiva-Dados

./: .gitignore  BoW_TF-IDF.ipynb  README.md  Recomendar_multimodal.ipynb  Scraping.ipynb  animes_completos.csv  banco_de_dados_animes.csv  banco_de_dados_animes_vetorizado.pkl  pyproject.toml
